sass/abstract/_mixins.scss
@mixin clearFix {
  &::after {
    content: "";
    display: table;
    clear: both;
  }
}

@mixin absltCenter {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@mixin buttonHover {
  transform: translate(-0.2rem, -0.8rem);
  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.8);
  cursor: pointer;
}

@mixin isVisibleMoveUp {
  & {
    overflow-x: hidden;
    transform: translateY(10%);
    opacity: 0;
    transition: all 0.7s;
    will-change: transform opacity;
  }

  &.is-visible {
    transform: translateY(0%);
    opacity: 1;
  }
}
@mixin isVisibleFade {
  & {
    opacity: 0;
    transition: all 1s;
    will-change: transform opacity;
  }

  &.is-visible {
    opacity: 1;
  }
}

// --------- BUILT BY Amit Ashdot ---------
//Media query manager
/*
0-350px: small phone
350-600px : phone
600-900px: tablet portarit
900-1070px: mini desktop
1070-1200px: tablet landscape
1200-1520px: small-desktop
[1200-1800px]: main style 
1800px + : big desktop

$breakpoint argument choices
-phone-small
-phone
-tab-port
-mini-desktop
-tab-land
-small-desktop
-big-desktop

1em =16px
*/
@mixin respond($breakpoint) {
  @if $breakpoint==phone-small {
    @media only screen and (max-width: 26em) {
      // 350px - iphone 5 (415px)
      @content;
    }
  }

  @if $breakpoint==phone {
    @media only screen and (max-width: 37.5em) {
      // 600px
      @content;
    }
  }

  @if $breakpoint==tab-port {
    @media only screen and (max-width: 58.75em) {
      // 900px
      @content;
    }
  }
  @if $breakpoint==mini-desktop {
    @media only screen and(max-width: 66.875em) {
      // 1070px
      @content;
    }
  }

  @if $breakpoint==tab-land {
    @media only screen and(max-width: 75em) {
      // 1200px
      @content;
    }
  }

  @if $breakpoint==small-desktop {
    @media only screen and(max-width:95em) {
      // 1520px
      @content;
    }
  }

  @if $breakpoint==normal-desktop {
    @media only screen and(max-width: 112.5em) {
      // 1800px
      @content;
    }
  }
  @if $breakpoint==big-desktop {
    @media only screen and(min-width: 112.5em) {
      // 1800px
      @content;
    }
  }
}

